update code club page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 Falcon Code Club
 </h1>
 </header>
+  <a href="boe-bot-test-drive.html">
+<button id="student-pages">
+<span>
+  Boe Bot Test Drive Template
+</span>
+</button>
+</a>
+  <!--
 <a href="student-pages.html">
 <button id="student-pages">
 <span>
@@ -22,6 +30,7 @@ Falcon Code Club
 </span>
 </button>
 </a>
+-->
 </body>
 </html>
 
