--- a/boe-bot-test-drive.html
+++ b/boe-bot-test-drive.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+  <pre>
 '{$STAMP BS2}
 '{$PBASIC 2.5}
 
@@ -200,3 +203,5 @@ PULSOUT 13, 850 'counter clockwise on servo 13
 PAUSE 20
 NEXT
 RETURN
+</pre>
+</html>
